--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
   nav {
-    background-color:grey;
-    font-family: ariel bold;
-    direction: rtl;
+       font-family: ariel bold;
+       background-color:grey;
+       direction: rtl;
   }
   
   nav > ul > li {
@@ -21,28 +21,35 @@
   }
   button > a {
    text-decoration: none;
-   color: white;
+   color: grey;
   }
   .menu {
     position: relative;
   }
-  .submenue {
+  .submenu {
     display: none;
     position: absolute;
-    margin: 0;
-    text-decoration: none;
-    width: 180px;
+    right: 0;
+    z-index:1;
     background-color: grey;
- }
-  .menu:hover > .submenue {
+    text-decoration: none;
+   }
+   .submenu > a {
+     display : block;
+     padding: 7px;
+     color: white;
+     text-decoration: none;
+
+   }
+   .menu:hover > .submenu {
     display: block;
-     }
-  input {
+   }
+    input {
     direction: rtl;
   }
   main {
     direction: rtl;
-  }
+ }
 .container {
     width: 900px; margin: auto; 
 }
